2003-02-21  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: some small cleanup
	* doc/vfs.n: better documentation for 'createdirectory'
	* library/mk4vfs.tcl: better posix adherence.
	* library/vfsUtils.tcl: typo fix.
	
2003-02-20  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: completed use of internalerror and posix handling
	for all functions.
	* doc/vfs.n:
	* doc/vfslib.n: more documentation regarding handling of errors
	and use of the 'internalerror' feature.
	
        Around the time Tcl 8.4.2 is released we should increment tclvfs's
	version to 1.3 and make a proper release.  In the meantime,
	improvements to all .tcl implementations (esp. proper error
	handling) would be greatly appreciated.
	
2003-02-20  Andreas Kupries  <andreask@activestate.com>

	* library/mk4vfs.tcl: Switching to canceling the stored after id
	  of the periodic commit in _unmount instead of canceling by
	  script. The scripts in '_umount' and 'periodicCommit' were
	  different, causing the cancel to fail, and thus an eternal
	  commit, failing after the close; hanging the system.

2003-02-20  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: added new debugging feature 'vfs::filesystem
	internalerror ?script?'  which can be used to specify a script to
	evaluate when any tclvfs implementation throws a standard Tcl
	error.  Once implementation of all .tcl's is complete, they
	should only return TCL_OK or a posix error code (which has a Tcl
	return value of -1).  Any other code will signal an unintended
	error which can be logged or reported using this new hook.  If
	the script is not set, the behaviour of this extension is
	unchanged.  For example:
	
        vfs::filesystem internalerror vfsreport
	proc vfsreport {} {
	    puts "vfs bug found: $::errorInfo"
	}
	
	Note that this has only been applied to those VFS api's which
	are not currently able to pass an error message at the Tcl level.